--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,7 +1,8 @@
 name: 5-minute-cron
 on:
+  push:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: "*/5 * * * *"
 jobs:
   cron:
     runs-on: ubuntu-latest
